--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -16,3 +16,9 @@
 @import 'components/form-input';
 @import 'components/custom-button';
 @import 'components/sign-in';
+@import 'components/sign-up';
+@import 'components/cart-icon';
+@import 'components/cart-dropdown';
+@import 'components/cart-item';
+@import 'components/checkout';
+@import 'components/checkout-item';
